fix: 컨트랙트 기준으로 DB 입력으로 수정 (#25, #S12P21E101-238)